force-app/main/default/objects/Form_Definition__c/Form_Definition__c.object-meta.xml
<CustomObject>
    <description>Stores form definitions created by the form builder</description>
    <label>Form Definition</label>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>