force-app/main/default/objects/Form_Definition__c/fields/Form_Definition__c.field-meta.xml
<CustomField>
    <fullName>Form_Definition__c</fullName>
    <description>JSON definition of the form structure and fields</description>
    <inlineHelpText>The JSON structure defining the form elements</inlineHelpText>
    <label>Form Definition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>