force-app/main/default/objects/Form_Definition__c/fields/Form_JSON__c.field-meta.xml
<CustomField>
    <fullName>Form_JSON__c</fullName>
    <description>JSON structure containing the form definition</description>
    <label>Form JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>