force-app/main/default/objects/Form_Definition__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the form is active and available for use</description>
    <inlineHelpText>Check to make this form active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>