force-app/main/default/objects/Form_Definition__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <description>The date and time when the form was last modified</description>
    <inlineHelpText>When the form definition was last updated</inlineHelpText>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>