force-app/main/default/objects/Form_Definition__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>Optional: API name of the Salesforce object to save form data to</description>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>