force-app/main/default/objects/Form_Definition__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Version number of the form</description>
    <inlineHelpText>The version number of this form definition</inlineHelpText>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>